console/1-deployment.yaml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: minio-console
spec:
  selector:
    matchLabels:
      app: minio-console
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio-console
    spec:
      containers:
      - name: minio-console
        image: minio/console:v0.6.3
        args:
        - server
        ports:
        - containerPort: 9443
        - containerPort: 9090
