console/3-deployment.yaml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: minio-console-vmar
  namespace: minio
spec:
  selector:
    matchLabels:
      app: minio-console-vmar
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio-console-vmar
    spec:
      containers:
      - name: minio-console-vmar
        image: minio/console:v0.4.6
        args:
        - server
        ports:
        - containerPort: 9443
        - containerPort: 9090
