console/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9090
      protocol: TCP
  selector:
    app: minio-console
