console/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-console-vmar
  namespace: minio
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9090
      protocol: TCP
    - name: https
      port: 9443
      protocol: TCP
  selector:
    app: minio-console-vmar
