console/3-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: s3ui-spgo-se
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`s3ui.spgo.se`)
    kind: Rule
    services:
    - name: minio-console
      port: 9090
  tls:
    certResolver: default
